<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp">
    <TextView
        android:id="@+id/options_dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        style="@style/ArtistTitleStyle"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/deleteOptionContainer"
        android:layout_below="@id/options_dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/delete"
            app:tint="@color/white"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delete_option"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/seeArtistOptionContainer"
        android:layout_below="@id/deleteOptionContainer"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/artist_placeholder"
            app:tint="@color/white"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/see_artits_options"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>